# march-madness-and-chaos

./: .gitignore  CODEBASE.md  README.md  main.py  pyproject.toml
notebooks/: act1_autopsy.ipynb  act2_probability.ipynb  act3_montecarlo.ipynb
src/: data_loader.py  generate_bracket_diagram.py  probability_model.py  simulation.py  upset_analysis.py
